fix print on firefox

--- a/css/print.less
+++ b/css/print.less
@@ -21,6 +21,7 @@ table.print {
     top: 10.5mm;
     left: 8mm;
     border-collapse: collapse;
+    display: block;
     p {
         margin: 0;
     }
